--- a/css/categorias.css
+++ b/css/categorias.css
@@ -1,170 +1,551 @@
-.body{
-    margin-top: 10px;
-    margin-left: 10px;
-    border: 3px solid black;
-    width: 90%;
-    height: 89%;
-    position: absolute;
-  }
+.topo{
+  background-color: black;
+  grid-area: topo;
+  width: 100%;
+  height: 110px;
+  border-radius: 10px;
   
-  .pokedex{
-    position:absolute;
-    width: 700px;
-    left: 0px;
-    top: 50px;
-    z-index: -1;
-  }
-  .title h1{
-    position:absolute;
-    left: 205px;
-    font-size: 50px;
-    margin-top: 5px;
-  }
-  
-  .pokeicon{
-    width: 100px;
-    height: 100px;
-    left: 7%;
-    margin-top: -13px;
-    position: absolute;
-    z-index: -1;
-  
-  }
-  
-  h2{
-    font-size: 50px;
-  }
-  .intro{
-  margin-top: 40%;
-  text-align: center;
+}
+
+.banimg{
+  width: 300px;
+  height: 98px;
+  z-index: -1;
+}
+
+
+/*Area Menu*/
+
+.menu{
+  background-color:rgb(211, 211, 211);
+  grid-area: menu;
+  display: flex;
+  list-style: none;
+  margin-left: 200px;
+  margin-top: -35px;
+  width: 850px;
+  height: 90px;
+  border-radius: 15px;
+}
+
+.menu__icon:hover{
   background-color: red;
-  font-size: 30px;
+  transition: 500ms;
+}
+
+.menu__icon{
+  border: 1px solid black ;
+  width: 110px;
+  height: 80px;
+  margin-left: 70px;
+  display:grid;
+  border-radius: 15px;
+}
+
+ol{
+
+  width: 110px;
+  height: 80px;
+  justify-items: center;
+  align-items: center;
+}
+.icon{
+  display: flex;
+  width: 30px;
+  height: 30px;
+}
+.pokeicon{
+  width: 70px;
+  height: 70px;
+  position: relative;
+  margin: -35px;
+  margin-left: 40px;
+}
+.dex{
+  width: 200px;
+  height: 50px;
+  margin-left: 50px;
+  margin-top: 10px;
+}
+
+.bu
+
+/* Fim Area Menu*/
+
+
+
+
+
+
+
+
+/*Conteudo*/
+
+.conteudo{
+  display: grid;
+  grid-area: conteudo;
+  border-radius: 15px;
+
+}
+
+.buscar_txt{
+  width: 300px;
+  height: 30px;
+  margin-left: -550px;
+  margin-top: 130px;
+  position: absolute;
+  border-radius: 10px;
+}
+
+.buscar_btn{
+  width: 100px;
+  height: 30px;
+  margin-left: -240px;
+  margin-top: 130px;
+  position: absolute;
+  border-radius: 10px;
+}
+
+
+.pokemons{
+  display: flex;
+  list-style: none;
+  gap: 10px;
+  border-radius: 10px;
+  margin-left: -210vh;
+  justify-content: center;
+  margin-top: 180px;
+}
+.card{
+  display: grid;
+  border: 1px solid black;
+  width: 150px;
+  border-radius: 15px;
+
+}
+.card:hover{
+  transform: scale(1.1);
+}
+.pokemon{
+  width: 140px;
+  height: 150px;
+  background-color: rgb(204, 204, 207);
+  border-radius: 10px;
+  border: 1px solid black;
+}
+.power{
+  display: flex;
+}
+.id{
+  font-size: 15px;
+}
+.nome{
+  font-size: 25px;
+}
+.tipo{
+  width: 50px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+
+
+
+/* Fim Conteudo*/
+
+.ban{
+/*background-color:darkgrey;*/
+  grid-area: ban;
+  width: 116px;
+  height: 900px;
+  margin-left: -1px;
+  
+}
+
+.banner{
+  /*background-color:darkgrey;*/
+  grid-area: banner;
+  width: 117px;
+  height: 900px;
+  margin-left: -8px;
+  
+}
+
+.rodape{
+  background-color: red;
+  grid-area: rodape;
+  height: 30px;
+  margin-top: -100px;
+}
+
+
+
+/* Area Mobile*/
+
+
+@media screen and (max-width: 480px)  {
+  .container{
+
+    display: grid;
+    grid-template-columns: (1, 200px);
+    grid-template-rows:repeat(1, 40px );
+    gap: 20px;
+    grid-template-areas:
+    "menu"
+    "conteudo";
+    
+  }
+
+  /*Area Menu*/
+
+.menu{
+  background-color:rgb(211, 211, 211);
+  grid-area: menu;
+  display: flex;
+  list-style: none;
+  margin-left: -110px;
+  margin-top: -40px;
+  width: 300px;
+  height: 50px;
+  gap: 10px;
+  padding: 5px;
+  border-radius: 15px;
+}
+.menu p{
+  display: none;
+}
+
+
+.menu__icon{
+  border: 1px solid black ;
+  width: 40px;
+  height: 40px;
+  margin-left: 30px;
+  display:grid;
+  border-radius: 15px;
+}
+
+
+.icon{
+  display: flex;
+  width: 30px;
+  height: 30px;
+}
+.pokeicon{
+  width: 70px;
+  height: 70px;
+  position: relative;
+  margin: -35px;
+  margin-left: 40px;
+}
+.dex{
+  width: 200px;
+  height: 25px;
+  margin-left: 25px;
+  margin-top: 10px;
+  display: none;
+}
+/* Fim Area Menu*/
+
+
+/* Area conteudo */
+.conteudo{
+  grid-area: conteudo;
+  margin-top: -30px;
+  width: 294px;
+  border-radius: 15px;
+  margin-left: -100px;
+  display: grid;
+
+}
+.pokemons{
+  display: grid;
+  list-style: none;
+  gap: 5px;
+  padding: 5px;
+  border-radius: 10px;
+  
+  
+}
+.card{
+  margin-left: -100px;
+  width:250px;
+  margin-left: -30px;
+  display: flex;
+  gap: 10px;
+  font-size: 20px;
+}
+.pokemon{
+  display: flex;
+  width: 100px;
+  height: 100px;
+  background-color: rgb(204, 204, 207);
+  border-radius: 10px;
+  border: 1px solid black;
+}
+.power{
+  display:grid;
+
+}
+.id{
+  font-size: 15px;
+}
+.nome{
+  font-size: 20px;
+}
+.tipo{
+  width: 10px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+
+/* Fim Area conteudo */
+
+/* Area Banners */
+.ban{
+  /*background-color:darkgrey;*/
+    grid-area: ban;
+    width: 216px;
+    height: 800px;
+    margin-left: -1px;
+    display: none;
   }
   
-  .sobre{
-    position: absolute;
-    margin-left: 45%;
-    font-size: 30px;
-    font-style: italic;
+  .banner{
+    /*background-color:darkgrey;*/
+    grid-area: banner;
+    width: 217px;
+    height: 800px;
+    margin-left: -8px;
+    display: none;
+    
   }
-  
-  .title{
-    border: 3px solid black;   
-    margin-top: -2px;
-    width: 1681px;
-    height: 78px;
-    position:absolute;
+
+  .banimg{
+    width: 400px;
+    height: 98px;
+    z-index: -1;
+    display: none;
+  }
+  .banimg2{
+    width: 400px;
+    height: 98px;
+    z-index: -1;
+    margin-left: 840px;
+    display: none;
     
   }
   
-  
-  
-  .menu{
-    top: 61px;
-    padding: 22px;
-    border: 3px solid black;
-    position:absolute;
-    width: 15vh;
-    height: 737px;
-    list-style: none;
-    text-align: left;
-  
-    
-  }
-  a{
-    margin: 1px;
-    padding: 30px;
-  }
-  
-  .iconball{
-    width: 3vh;
-    position:absolute;
-    left: 1;
-    margin-left: -2px;
-    
-  
-  }
-  
-  .poke{
-    top: 6vh;
-    margin-left: 100vh;
-    padding: 1vh;
-    margin: 3vh;
-    width: 87%;
-    height: 720px;
-    text-align: center;
-    position:absolute;
-    margin-left: 20vh;
-  /* border: 1px solid black;*/
-  
-  }
-  
-  
+
+/* Fim Area Banners */
+
+/* Area Rodape */
   .rodape{
-    position: fixed;
-    margin-top: 91vh;
-    margin-left: 10px;
-    border: 1px solid black; 
-    width: 1690px;
-    text-align: center;
+    background-color: red;
+    grid-area: rodape;
+    height: 30px;
+    display: none;
   }
-  /*Fim Menu*/
-  
-  .categoria{
-    position: absolute;
+
+  /* Fim Area Rodape */
+
+
+  .topo{
+    background-color: black;
+    grid-area: topo;
+    width: 100%;
+    height: 110px;
+    border-radius: 10px;
+    display: none;
+  }
+
+}
+
+
+
+@media screen and (min-width: 481px) and (max-width:768px ){
+  .container{
+
+    display: grid;
+    grid-template-columns: (2, 500px );
+    grid-template-rows: repeat(3, 500px 500px 500px);
+    gap: 10px;
+    grid-template-areas:
+    "menu menu"
+    "conteudo conteudo"
+    "conteudo conteudo";
     
-    left: 22vh;
-    margin-top: 90px;
-    font-size: 30px;
+  }
+
+  /*Area Menu*/
+
+  .menu{
+    background-color:rgb(211, 211, 211);
+    grid-area: menu;
+    display: flex;
+    list-style: none;
+    margin-left: -110px;
+    margin-top: -40px;
+    width: 635px;
+    height: 50px;
+    gap: 40px;
+    padding: 5px;
+    border-radius: 15px;
+  }
+.menu p{
+  display: none;
+}
+
+
+.menu__icon{
+  border: 1px solid black ;
+  width: 40px;
+  height: 40px;
+  margin-left: 30px;
+  display:grid;
+  border-radius: 15px;
+}
+
+
+.icon{
+  display: flex;
+  width: 30px;
+  height: 30px;
+}
+.pokeicon{
+  width: 70px;
+  height: 70px;
+  position: relative;
+  margin: -35px;
+  margin-left: 40px;
+}
+.dex{
+  width: 150px;
+  height: 25px;
+  margin-left: 15px;
+  margin-top: 10px;
+
+}
+/* Fim Area Menu*/
+
+
+/* Area conteudo */
+.conteudo{
+  grid-area: conteudo;
+  margin-top: -30px;
+  width: 600px;
+  border-radius: 15px;
+  margin-left: -100px;
+  display: flex;
+
+}
+.pokemons{
+  display: grid;
+  list-style: none;
+  gap: 10px;
+  padding: 15px;
+  border-radius: 10px;
+  
+  
+}
+.card{
+  margin-left: -100px;
+  width:200px;
+  margin-left: -32px;
+  display: flex;
+  gap: 10px;
+  font-size: 15px;
+}
+.pokemon{
+  display: grid;
+  width: 90px;
+  height: 90px;
+  background-color: rgb(204, 204, 207);
+  border-radius: 10px;
+  border: 1px solid black;
+}
+.power{
+  display:grid;
+
+}
+.id{
+  font-size: 15px;
+}
+.nome{
+  font-size: 15px;
+}
+.tipo{
+  width: 10px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+
+/* Fim Area conteudo */
+
+
+
+
+/* Area Banners */
+.ban{
+  /*background-color:darkgrey;*/
+    grid-area: ban;
+    width: 216px;
+    height: 800px;
+    margin-left: -1px;
+    display: none;
   }
   
-  .bul{
-    position: absolute;
-    width: 350px;
-    height: 250px;
-    margin-top: 10vh;
+  .banner{
+    /*background-color:darkgrey;*/
+    grid-area: banner;
+    width: 217px;
+    height: 800px;
+    margin-left: -8px;
+    display: none;
+    
+  }
+
+  .banimg{
+    width: 400px;
+    height: 98px;
+    z-index: -1;
+    display: non
+  }
+  .banimg2{
+    width: 400px;
+    height: 98px;
+    z-index: -1;
+    margin-left: 840px;
+    display: none;
+    
   }
   
-  .bult{
-    position: absolute;
-    width: 350px;
-    height: 250px;
-    margin-top: 40vh;
-    font-size: 30px;
-  
+
+/* Fim Area Banners */
+
+/* Area Rodape */
+  .rodape{
+    background-color: red;
+    grid-area: rodape;
+    height: 30px;
+    display: none;
   }
-  
-  .mew{
-    position: absolute;
-    width: 350px;
-    height: 250px;
-    left: 450px;
-    margin-top: 30vh;
-  
+
+  /* Fim Area Rodape */
+
+
+  .topo{
+    background-color: black;
+    grid-area: topo;
+    width: 100%;
+    height: 110px;
+    border-radius: 10px;
+    display: none;
   }
-  .mewt{
-    position: absolute;
-    width: 350px;
-    height: 250px;
-    left: 450px;
-    margin-top: 10vh;
-    font-size: 30px;
-  }
+}
+
+@media screen and (min-width: 481px) and (max-width:768px ){
   
-  .jir{
-    position: absolute;
-    width: 350px;
-    height: 250px;
-    left: 950px;
-    margin-top: 10vh;
-  }
-  
-  .jirt{
-  
-    position: absolute;
-    width: 350px;
-    height: 250px;
-    left: 950px;
-    margin-top: 40vh;
-    font-size: 30px;
-  }
+}
