--- a/css/login.css
+++ b/css/login.css
@@ -1,164 +1,534 @@
-.body{
-    margin-top: 10px;
-    margin-left: 10px;
-    border: 3px solid black;
-    width: 90%;
-    height: 89%;
-    position: absolute;
-  }
+.topo{
+  background-color: black;
+  grid-area: topo;
+  width: 100%;
+  height: 110px;
+  border-radius: 10px;
   
-  .pokedex{
-    position:absolute;
-    width: 700px;
-    left: 0px;
-    top: 50px;
-    z-index: -1;
-  }
-  .title h1{
-    position:absolute;
-    left: 205px;
-    font-size: 50px;
-    margin-top: 5px;
-  }
+}
+
+.banimg{
+  width: 200px;
+  height: 98px;
+  z-index: -1;
+}
+.banimg2{
+  width: 200px;
+  height: 98px;
+  z-index: -1;
+  margin-left: 1060px;
+  margin-top: -310px;
   
-  .pokeicon{
-    width: 100px;
-    height: 100px;
-    left: 7%;
-    margin-top: -13px;
-    position: absolute;
-    z-index: -1;
-  
-  }
-  
-  h2{
-    font-size: 50px;
-  }
-  .intro{
-  margin-top: 40%;
-  text-align: center;
+}
+
+
+/*Area Menu*/
+
+.menu{
+  background-color:rgb(211, 211, 211);
+  grid-area: menu;
+  display: flex;
+  list-style: none;
+  margin-left: 100px;
+  margin-top: -35px;
+  width: 850px;
+  height: 90px;
+  border-radius: 15px;
+}
+
+.menu__icon:hover{
   background-color: red;
-  font-size: 30px;
-  }
-  
-  .sobre{
-    position: absolute;
-    margin-left: 45%;
-    font-size: 30px;
-    font-style: italic;
-  }
-  
-  .title{
-    border: 3px solid black;   
-    margin-top: -2px;
-    width: 1681px;
-    height: 78px;
-    position:absolute;
+  transition: 500ms;
+}
+
+.menu__icon{
+  border: 1px solid black ;
+  width: 110px;
+  height: 80px;
+  margin-left: 70px;
+  display:grid;
+  border-radius: 15px;
+}
+
+ol{
+
+  width: 110px;
+  height: 80px;
+  justify-items: center;
+  align-items: center;
+}
+.icon{
+  display: flex;
+  width: 30px;
+  height: 30px;
+}
+.pokeicon{
+  width: 70px;
+  height: 70px;
+  position: relative;
+  margin: -35px;
+  margin-left: 40px;
+}
+.dex{
+  width: 200px;
+  height: 50px;
+  margin-left: 50px;
+  margin-top: 10px;
+}
+
+/* Fim Area Menu*/
+
+
+
+
+
+
+/* Area Banners */
+.ban{
+  /*background-color:darkgrey;*/
+    grid-area: ban;
+    width: 116px;
+    height: 700px;
+    margin-left: -1px;
     
   }
   
+  .banner{
+    /*background-color:darkgrey;*/
+    grid-area: banner;
+    width: 117px;
+    height: 700px;
+    margin-left: -8px;
+    
+  }
+
+/* Fim Area Banners */
+
+
+.conteudo{
   
+  grid-area: conteudo;
+  border-radius: 15px;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.ash{
+  width: 300px;
+  height: 300px;
+  margin-top: -250px;
+  margin-left: 600px;
+  
+}
+
+.link{
+  align-items: center;
+  display: flex;
+  padding: 5px;
+  width: 600px;
+  gap: 350px;
+}
+
+.link .lsenha{
+  
+  
+
+}
+.log{
+
+
+}
+.ltext{
+  align-items: center;
+  padding: 20px;
+  font-size: 40px;
+}
+
+.input{
+  width: 50%;
+  background-color: rgb(240, 230, 230);
+
+}
+
+.rodape{
+  background-color: red;
+  grid-area: rodape;
+  height: 30px;
+  margin-top: -300px;
+}
+
+
+
+
+  /* Area Mobile*/
+
+
+  @media screen and (max-width: 480px)  {
+    .container{
+  
+      display: grid;
+      grid-template-columns: (1, 200px);
+      grid-template-rows:repeat(1, 40px );
+      gap: 20px;
+      grid-template-areas:
+      "menu"
+      "conteudo";
+      
+    }
+  
+    /*Area Menu*/
   
   .menu{
-    top: 61px;
-    padding: 22px;
-    border: 3px solid black;
-    position:absolute;
-    width: 15vh;
-    height: 737px;
+    background-color:rgb(211, 211, 211);
+    grid-area: menu;
+    display: flex;
     list-style: none;
-    text-align: left;
-  
-    
-  }
-  a{
-    margin: 1px;
-    padding: 30px;
-  }
-  
-  .iconball{
-    width: 3vh;
-    position:absolute;
-    left: 1;
-    margin-left: -2px;
-    
-  
-  }
-  
-  .poke{
-    top: 6vh;
-    margin-left: 100vh;
-    padding: 1vh;
-    margin: 3vh;
-    width: 87%;
-    height: 720px;
-    text-align: center;
-    position:absolute;
-    margin-left: 20vh;
-  /* border: 1px solid black;*/
-  
-  }
-  
-  
-  .rodape{
-    position: fixed;
-    margin-top: 91vh;
-    margin-left: 10px;
-    border: 1px solid black; 
-    width: 1690px;
-    text-align: center;
-  }
-  /*Fim Menu*/
-  
-  .log{
-  
-    /*border: 1px solid black;*/
-    position: absolute;
-    margin: 100px;
-    left: 170px;
-    background-color: #F8F8FF;
-  }
-  
-  .rsenha{
-    position: fixed;
-    margin-top: vh;
-    left: 88vh;
-    
-  }
-  
-  
-  .entrar{
-    position: absolute;
+    margin-left: -110px;
+    margin-top: -40px;
+    width: 300px;
     height: 50px;
-    border-radius: 20px;
-    width: 80px;
-    margin-top: 50px;
-    left: 95px;
-  
+    gap: 10px;
+    padding: 5px;
+    border-radius: 15px;
+  }
+  .menu p{
+    display: none;
   }
   
-  .name{
-    background-color:#F0F8FF ;
-    position: absolute;
-    left: 10vh;
+  
+  .menu__icon{
+    border: 1px solid black ;
+    width: 40px;
+    height: 40px;
+    margin-left: 30px;
+    display:grid;
+    border-radius: 15px;
+  }
+  
+  
+  .icon{
+    display: flex;
+    width: 30px;
     height: 30px;
-  
   }
-  .lname{
+  .pokeicon{
+    width: 70px;
+    height: 70px;
     position: relative;
-    left: 10vh; 
+    margin: -35px;
+    margin-left: 40px;
+  }
+  .dex{
+    width: 200px;
+    height: 25px;
+    margin-left: 25px;
+    margin-top: 10px;
+    display: none;
+  }
+  /* Fim Area Menu*/
+  
+  /* Area conteudo */
+  
+  .conteudo{
+    grid-area: conteudo;
+    margin-top: -30px;
+    width: 194px;
+    border-radius: 15px;
+    margin-left: -200px;
+    display: grid;
+  
+  }
+
+  .log{
+    gap: 1px;
+    margin-top: -450px;
+    margin-left: 590px;
+  
+  }
+
+  .input{
+    border-radius: 10px;
+  }
+
+  
+.link{
+display: grid;
+gap: 10px;
+}
+
+.entrar{
+  margin-left: 50px;
+  border-radius: 10px;
+  width: 100px;
+}
+.ltext{
+  padding: 2px;
+  font-size: 20px;
+  width: 10px;
+}
+
+.input{
+  width: 250px;
+  background-color:aliceblue;
+
+}
+
+.ash{
+  width: 300px;
+  height: 300px;
+  margin-top: -250px;
+  margin: -300px;
+  display: none;
+}
+
+
+
+
+  
+/* Area Banners */
+.ban{
+  /*background-color:darkgrey;*/
+    grid-area: ban;
+    width: 216px;
+    height: 800px;
+    margin-left: -1px;
+    display: none;
   }
   
-  .senha{
-    background-color: #F0F8FF;
-    position: absolute;
-    left: 10vh;
-    margin-top: 40px;
+  .banner{
+    /*background-color:darkgrey;*/
+    grid-area: banner;
+    width: 217px;
+    height: 800px;
+    margin-left: -8px;
+    display: none;
+    
+  }
+
+  .banimg{
+    width: 400px;
+    height: 98px;
+    z-index: -1;
+    display: none;
+  }
+  .banimg2{
+    width: 400px;
+    height: 98px;
+    z-index: -1;
+    margin-left: 840px;
+    display: none;
+    
+  }
+  
+
+/* Fim Area Banners */
+
+/* Area Rodape */
+  .rodape{
+    background-color: red;
+    grid-area: rodape;
     height: 30px;
+    display: none;
   }
+
+  /* Fim Area Rodape */
+
+
+  .topo{
+    background-color: black;
+    grid-area: topo;
+    width: 100%;
+    height: 110px;
+    border-radius: 10px;
+    display: none;
+  }
+
+}
+
+@media screen and (min-width: 481px) and (max-width:768px ){
+  .container{
   
-  .lsenha{
-    position: fixed;
-    left: 39vh; 
-    margin-top: 40px;
+    display: grid;
+    grid-template-columns: (1, 200px);
+    grid-template-rows:repeat(1, 40px );
+    gap: 20px;
+    grid-template-areas:
+    "menu"
+    "conteudo";
+    
   }
+
+  /*Area Menu*/
+
+.menu{
+  background-color:rgb(211, 211, 211);
+  grid-area: menu;
+  display: flex;
+  list-style: none;
+  margin-left: -110px;
+  margin-top: -40px;
+  width: 455px;
+  height: 50px;
+  gap: 50px;
+  padding: 5px;
+  border-radius: 15px;
+}
+.menu p{
+  display: none;
+}
+
+
+.menu__icon{
+  border: 1px solid black ;
+  width: 40px;
+  height: 40px;
+  margin-left: 30px;
+  display:grid;
+  border-radius: 15px;
+}
+
+
+.icon{
+  display: flex;
+  width: 30px;
+  height: 30px;
+}
+.pokeicon{
+  width: 70px;
+  height: 70px;
+  position: relative;
+  margin: -35px;
+  margin-left: 40px;
+}
+.dex{
+  width: 200px;
+  height: 25px;
+  margin-left: 25px;
+  margin-top: 10px;
+  display: none;
+}
+/* Fim Area Menu*/
+
+/* Area conteudo */
+
+.conteudo{
+  grid-area: conteudo;
+  margin-top: -30px;
+  width: 294px;
+  border-radius: 15px;
+  margin-left: -100px;
+  display: grid;
+
+}
+.ash{
+  width: 300px;
+  height: 300px;
+  margin-left: 700px;
+  margin-top: -300px;
+  display: none;
+}
+
+.log{
+  gap: 1px;
+  margin-top: -450px;
+  margin-left: 340px;
+
+}
+
+.input{
+  border-radius: 10px;
+}
+
+
+.link{
+display: grid;
+gap: 10px;
+}
+
+.entrar{
+margin-left: 50px;
+border-radius: 10px;
+width: 100px;
+}
+.ltext{
+padding: 2px;
+font-size: 20px;
+width: 10px;
+}
+
+.input{
+width: 250px;
+background-color:aliceblue;
+
+}
+
+
+
+
+
+
+/* Area Banners */
+.ban{
+/*background-color:darkgrey;*/
+  grid-area: ban;
+  width: 216px;
+  height: 800px;
+  margin-left: -1px;
+  display: none;
+}
+
+.banner{
+  /*background-color:darkgrey;*/
+  grid-area: banner;
+  width: 217px;
+  height: 800px;
+  margin-left: -8px;
+  display: none;
+  
+}
+
+.banimg{
+  width: 400px;
+  height: 98px;
+  z-index: -1;
+  display: none;
+}
+.banimg2{
+  width: 400px;
+  height: 98px;
+  z-index: -1;
+  margin-left: 840px;
+  display: none;
+  
+}
+
+
+/* Fim Area Banners */
+
+/* Area Rodape */
+.rodape{
+  background-color: red;
+  grid-area: rodape;
+  height: 30px;
+  display: none;
+}
+
+/* Fim Area Rodape */
+
+
+.topo{
+  background-color: black;
+  grid-area: topo;
+  width: 100%;
+  height: 110px;
+  border-radius: 10px;
+  display: none;
+}
+
+}
+
+@media screen and (min-width: 481px) and (max-width:768px ){
+  
+}
